--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,124 +1,20 @@
-/* Responsive design */
-@media (max-width: 1000px) {
-  nav {
-    gap: 1vw;
-  }
-
-  nav a {
-    font-size: 10px;
-  }
-
-  p {
-    font-size: 10px;
-  }
-
-  .cta-button {
-    font-size: 10px;
-    min-width: 120px;
-  }
-}
-
-@media (max-width: 786px) {
-  body {
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 100px;
-  }
-
-  header {
-    padding: 20px;
-    position: relative;
-  }
-
-  nav {
-    position: static;
-    display: block;
-    text-align: center;
-    margin-top: 10px;
-  }
-
-  nav a {
-    display: block;
-    margin: 5px 0;
-  }
-
-  .portfolio {
-    margin-left: 10px;
-  }
-
-  .logo {
-    width: 120px;
-  }
-
-  .row {
-    flex-direction: column;
-  }
-
-  .card {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-
-  .card-header {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .card-icon {
-    margin-top: 10px;
-  }
-
-  h1 {
-    font-size: 2em;
-  }
-
-  p {
-    font-size: 16px;
-  }
-
-  .about-list li {
-    font-size: 14px;
-    padding-left: 25px;
-  }
-
-  .about-list li::before {
-    font-size: 16px;
-  }
-
-  .contact-item {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .contact-icon {
-    margin-right: 0;
-    margin-bottom: 10px;
-  }
-
-  .contact-form {
-    max-width: none;
-    padding: 15px;
-    width: 100%;
-    margin-left: 0;
-  }
-}
-
+/* Responsive design for mobile devices */
 @media (max-width: 480px) {
   body {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 2vw;
+    margin-right: 2vw;
   }
 
   header {
-    padding: 10px;
+    padding: 1vw 2vw;
   }
 
   .logo {
-    width: 100px;
+    width: 20vw;
   }
 
   h1 {
-    font-size: 1.8em;
+    font-size: 3vw;
   }
 
   .about-list li {
