--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ body {
 header {
   position: fixed;
   display: flex;
+  width: 100%;
   left: 0;
   right: 0;
   top: 0;
@@ -149,4 +150,53 @@ footer a {
   font-size: 0.8vw;
   color: #f6f6f6a1;
   text-decoration: none;
+}
+
+@media (max-width: 480px) {
+  header {
+    padding: 3.5vw 7vw;
+    height: auto;
+  }
+
+  .logo {
+    width: 27.5vw;
+  }
+
+  .hamburger-btn {
+    border: none;
+    background-color: inherit;
+  }
+
+  .menu-icon {
+    width: 10.5vw;
+    max-width: 48px;
+    height: auto;
+  }
+
+  .menu-icon:hover {
+    opacity: 70%;
+  }
+
+  .open {
+    display: none;
+  }
+
+  nav {
+    flex-direction: column;
+    position: fixed;
+    right: 5vw;
+    top: 25vw;
+    padding: 3vw;
+    border-radius: 8px;
+    background-color: inherit;
+  }
+
+  nav a {
+    font-size: 3vw;
+  }
+
+  footer p,
+  footer a {
+    font-size: 1vw;
+  }
 }
