Mobile Responsive Changes

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -70,3 +70,41 @@
   object-fit: fit;
   border-radius: 0.55vw 0.55vw 0 0;
 }
+
+/* Responsive design for mobile devices for home page */
+@media (max-width: 480px) {
+  .mobile-container {
+    flex-direction: column;
+  }
+
+  .section-container {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+  }
+
+  h1 {
+    margin-top: 35vw;
+    font-size: 4.2vw;
+  }
+
+  p {
+    font-size: 3vw;
+  }
+
+  .project-header {
+    padding: 5vw;
+  }
+
+  .project-header h3 {
+    font-size: 3vw;
+  }
+
+  .project-header p {
+    font-size: 2vw;
+    font-weight: 300;
+  }
+
+  .project-image {
+    height: 40vw;
+  }
+}
