--- a/styles/about.css
+++ b/styles/about.css
@@ -28,3 +28,40 @@
   font-weight: bold;
   font-size: 1.2vw;
 }
+
+/* Responsive design for mobile devices for home page */
+@media (max-width: 480px) {
+  .mobile-container {
+    flex-direction: column;
+  }
+
+  .homepage-pic {
+    border-radius: 2vw;
+    width: 100%;
+    margin-top: 20vw;
+  }
+
+  h1 {
+    font-size: 5.5vw;
+    margin-top: 7vw;
+  }
+
+  p {
+    font-size: 4vw;
+    font-weight: 400;
+  }
+
+  .about-list {
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+  }
+
+  .about-list li {
+    font-size: 3.5vw;
+    padding-left: 5vw;
+  }
+
+  .about-list li::before {
+    font-size: 3.5vw;
+  }
+}
