--- a/styles/contact.css
+++ b/styles/contact.css
@@ -84,3 +84,52 @@ h4 {
   padding: 0.7vw 1.4vw;
   width: 100%;
 }
+
+/* Responsive design for mobile devices for home page */
+@media (max-width: 480px) {
+  .mobile-container {
+    flex-direction: column;
+    margin-top: 15vw;
+  }
+
+  h2.contact-header {
+    font-size: 4vw;
+  }
+
+  .contact-item {
+    padding: 3vw;
+    margin-top: 5vw;
+    margin-bottom: 5vw;
+  }
+
+  .contact-item img {
+    width: 5vw;
+    height: auto;
+  }
+
+  .contact-text {
+    padding-left: 3vw;
+  }
+
+  .contact-text h4 {
+    font-size: 2.5vw;
+  }
+
+  .contact-text p {
+    font-size: 2vw;
+  }
+
+  .contact-form label,
+  .contact-form input,
+  .contact-form textarea {
+    font-size: 2.5vw;
+    margin-bottom: 2vw;
+    padding: 2vw;
+  }
+
+  .contact-form .cta-button {
+    height: 5vw;
+    border-radius: 3px;
+    font-size: 2vw;
+  }
+}
