--- a/styles/home.css
+++ b/styles/home.css
@@ -21,10 +21,6 @@
 
 /* Responsive design for mobile devices for home page */
 @media (max-width: 480px) {
-  .mobile-hide {
-    display: none;
-  }
-
   .mobile-container {
     flex-direction: column;
   }
@@ -51,6 +47,7 @@
 
   p {
     font-size: 4vw;
+    font-weight: 400;
   }
 
   .mobile-btns {
