--- a/styles/services.css
+++ b/styles/services.css
@@ -51,3 +51,45 @@
   height: auto;
   object-fit: contain;
 }
+
+/* Responsive design for mobile devices for home page */
+@media (max-width: 480px) {
+  .mobile-container {
+    flex-direction: column;
+  }
+
+  h1 {
+    margin-top: 35vw;
+    font-size: 4.2vw;
+  }
+
+  p {
+    font-size: 3vw;
+  }
+
+  .card {
+    padding: 5vw;
+    margin-top: 3vw;
+    display: flex;
+  }
+
+  .card-header {
+    flex-direction: column;
+  }
+  .card-header h2 {
+    font-size: 3vw;
+  }
+
+  .card-header img {
+    width: 5vw;
+    height: auto;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
+  }
+
+  .card p {
+    text-align: center;
+    font-size: 2.5vw;
+    font-weight: 300;
+  }
+}
