--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,7 @@
+.desktop-hide {
+  display: none;
+}
+
 .centered-text {
   text-align: center;
 }
@@ -87,6 +91,10 @@ h4 {
 
 /* Responsive design for mobile devices for home page */
 @media (max-width: 480px) {
+  .desktop-hide {
+    display: inherit;
+  }
+
   .mobile-container {
     flex-direction: column;
     margin-top: 15vw;
