--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,10 @@
   display: none;
 }
 
+.desktop-hide {
+  display: none;
+}
+
 .centered-text {
   text-align: center;
 }
@@ -75,6 +79,10 @@
 @media (max-width: 480px) {
   .mobile-container {
     flex-direction: column;
+  }
+
+  .desktop-hide {
+    display: inherit;
   }
 
   .section-container {
