--- a/styles/services.css
+++ b/styles/services.css
@@ -1,3 +1,7 @@
+.desktop-hide {
+  display: none;
+}
+
 .centered-text {
   text-align: center;
 }
@@ -56,6 +60,10 @@
 @media (max-width: 480px) {
   .mobile-container {
     flex-direction: column;
+  }
+
+  .desktop-hide {
+    display: inherit;
   }
 
   h1 {
