--- a/styles/style.css
+++ b/styles/style.css
@@ -133,6 +133,8 @@ footer {
   background-color: var(--primary-color);
   margin-top: 4.85vw;
   padding: 2vw;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 footer .column {
@@ -143,7 +145,7 @@ footer .column {
 footer p {
   text-align: left;
   font-size: 0.8vw;
-  margin-bottom: 0;
+  margin: 0.25vw 0;
 }
 
 footer a {
