--- a/styles/about.css
+++ b/styles/about.css
@@ -2,10 +2,16 @@
   display: none;
 }
 
+.column {
+  overflow: hidden;
+}
+
 .homepage-pic {
   max-width: 100%;
-  height: auto;
-  border-radius: 0.55vw;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 0.5rem;
 }
 
 /* About page list styles */
@@ -16,9 +22,9 @@
 
 .about-list li {
   position: relative;
-  padding-left: 2vw;
-  margin-bottom: 0.7vw;
-  font-size: 1.1vw;
+  padding-left: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1.0625rem;
   color: var(--text-color);
   line-height: 1.5;
 }
@@ -30,10 +36,20 @@
   top: 0;
   color: var(--primary-color);
   font-weight: bold;
-  font-size: 1.2vw;
+  font-size: 1.25rem;
 }
 
 /* Responsive design for mobile devices for home page */
+@media (max-width: 1024px) {
+  .about-list li {
+    padding-left: 1.25rem;
+    font-size: 1rem;
+  }
+  .homepage-pic {
+    border-radius: 0.5rem;
+  }
+}
+
 @media (max-width: 480px) {
   .mobile-container {
     flex-direction: column;
@@ -44,32 +60,32 @@
   }
 
   .homepage-pic {
-    border-radius: 2vw;
+    border-radius: 1rem;
     width: 100%;
-    margin-top: 20vw;
+    margin-top: 6rem;
   }
 
   h1 {
-    font-size: 5.5vw;
-    margin-top: 7vw;
+    font-size: 2.5rem;
+    margin-top: 1.75rem;
   }
 
   p {
-    font-size: 4vw;
+    font-size: 1.25rem;
     font-weight: 400;
   }
 
   .about-list {
-    margin-top: 5vw;
-    margin-bottom: 5vw;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
 
   .about-list li {
-    font-size: 3.5vw;
-    padding-left: 5vw;
+    font-size: 1.25rem;
+    padding-left: 1.5rem;
   }
 
   .about-list li::before {
-    font-size: 3.5vw;
+    font-size: 1.25rem;
   }
 }
