--- a/styles/home.css
+++ b/styles/home.css
@@ -92,9 +92,8 @@ p {
     display: inherit;
   }
 
-  .portfolio {
-    margin-left: 1rem;
-    margin-right: 1rem;
+  .section-spacing {
+    margin-top: 0;
   }
 
   .homepage-pic {
@@ -103,9 +102,9 @@ p {
   }
 
   h1 {
-    font-size: 2.5rem;
-    margin-top: 1.75rem;
-    margin-bottom: 1.75rem;
+    font-size: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
   }
 
   h3 {
@@ -113,10 +112,10 @@ p {
   }
 
   p {
-    font-size: 1.125rem;
+    font-size: 1rem;
     font-weight: 400;
-    margin-top: 1.25rem;
-    margin-bottom: 1.25rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 
   .section-spacing {
@@ -124,27 +123,35 @@ p {
   }
 
   .about-list li {
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-left: 1.5rem;
   }
 
   .about-list li::before {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 
   .mobile-btns {
-    margin-top: 1.75rem;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
   }
 
   .mobile-btn {
-    width: 35vw;
-    height: 10vw;
-    border-radius: 1rem;
-    font-size: 1.25rem;
+    padding: 0.75rem 1.5rem;
+    width: 100%;
+    min-height: 44px;
+    border-radius: 0.625rem;
+    font-size: 1rem;
+  }
+
+  .portfolio {
+    margin: 0;
   }
 
   footer {
-    margin-top: 1.75rem;
+    margin-top: 1.5rem;
     border-top-left-radius: 0.75rem;
     border-top-right-radius: 0.75rem;
   }
