--- a/styles/about.css
+++ b/styles/about.css
@@ -59,33 +59,37 @@
     display: inherit;
   }
 
+  .section-spacing {
+    margin-top: 0;
+  }
+
   .homepage-pic {
     border-radius: 1rem;
     width: 100%;
-    margin-top: 6rem;
   }
 
   h1 {
-    font-size: 2.5rem;
-    margin-top: 1.75rem;
+    font-size: 2rem;
+    margin-top: 1.5rem;
   }
 
   p {
-    font-size: 1.25rem;
+    font-size: 1rem;
     font-weight: 400;
   }
 
-  .about-list {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
   .about-list li {
-    font-size: 1.25rem;
+    font-size: 1rem;
     padding-left: 1.5rem;
   }
 
   .about-list li::before {
-    font-size: 1.25rem;
+    font-size: 1rem;
+  }
+
+  footer {
+    margin-top: 1.5rem;
+    border-top-left-radius: 0.75rem;
+    border-top-right-radius: 0.75rem;
   }
 }
