--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,6 +90,7 @@
 @media (max-width: 480px) {
   .mobile-container {
     flex-direction: column;
+    gap: 1.25rem;
   }
 
   .desktop-hide {
@@ -102,12 +103,11 @@
   }
 
   h1 {
-    margin-top: 8.75rem;
-    font-size: 2.25rem;
+    font-size: 2rem;
   }
 
   p {
-    font-size: 1.125rem;
+    font-size: 1rem;
   }
 
   .project-header {
@@ -119,11 +119,10 @@
   }
 
   .project-header p {
-    font-size: 1rem;
     font-weight: 300;
   }
 
   .project-image {
-    height: 40vw;
+    height: 10rem;
   }
 }
